ingress-disease-detector.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-disease-detector
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: disease-detector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: detector-service
                port:
                  number: 5000
